I edited the modal in the Search.js by placing the seperate parts of that particular return statement into two rows. This appears to remedy the issue that we had where when a user searched for a margarita their was a huge gap between the 5th and sixth card. this also pushed the card left so that when we place search for one drink that result is on the left and not the right. I also edited the card.js by removing a inline center rule.

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,7 +1,7 @@
 .cocktail {    
     background-color: rgb(133, 128, 128); 
     width: 30%; 
-    height: 400px; 
+    height: 425px; 
     margin-top: 30px; 
     margin-bottom: 60px;  
     border: 6px double red;  
@@ -19,6 +19,7 @@
     font-size: 30px; 
     text-align: center; 
     font-weight: bold; 
+    line-height: 30px;
     
 }  
 
